--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,64 +18,7 @@
 
 <body>
 	<!-- Header -->
-	<header class="main-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-5 col-md-2">
-					<a href="/" class="main-header_home-link">
-						<img src="/images/logo-mercado-liebre.svg">
-					</a>
-				</div>
-	
-				<div class="col-7 col-md-6">
-					<form action="search-results" method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más"
-							class="search-form_input">
-						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
-					</form>
-				</div>
-	
-				<div class="col-12 col-md-4">
-					<a class="main-header_credit-link">
-						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
-					</a>
-				</div>
-			</div>
-	
-			<button class="btn-toggle-navbar">
-				<i class="fas fa-bars"></i>
-			</button>
-	
-			<nav class="main-navbar">
-				<ul class="left-navbar">
-					<li><a href="/">Todos los productos</a></li>
-					<!-- solo logueado <li><a href="">Cargar productos</a></li> -->
-				</ul>
-	
-				<ul class="right-navbar">
-					<!-- Solo logueado <li><a href="profile.html">
-								Nombre del usuario <i class="fas fa-user"></i>
-							</a>
-						</li>
-						<li>
-							<form action="" method="post">
-								<button class="logout" type="submit">
-									Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-								</button>
-							</form>
-						</li> -->
-					<li>
-						<a href="register">Creá tu cuenta <i class="far fa-address-card"></i>
-						</a>
-					</li>
-					<li>
-						<a href="login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+	<%- include("./partials/header")  %>
 	<!-- /Header -->
 
 	<!-- Novedades -->
@@ -85,12 +28,37 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de registro. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
-			</h2>
+			<form action="/" method="GET">
+				<div>
+					<label for="mail">Email:</label>
+					<input id="mail" type="email" name="mail" value="">
+				</div>
+				<div>
+					<label for="usuario">Usuario:</label>
+					<input id="usuario" type="text" name="usuario" value="">
+				</div>
+				<div>
+					<label for="contrasenia">Contraseña:</label>
+					<input id="contrasenia" type="password" name="contrasenia" value="">
+				</div>
+				<div>
+					<label for="fecha_nac">Fecha de nacimiento:</label>
+					<input id="fecha_nac" type="date" name="fecha_nac" value="">
+				</div>
+				<div>
+					<label for="dni">DNI:</label>
+					<input id="dni" type="number" name="dni" value="">
+				</div>
+				<div>
+					<label for="pp">Foto de perfil:</label>
+					<input id="pp" type="text" name="pp" value="">
+				</div>
+				<div>
+					<a href="/" class="volver_index">
+					<button type="submit">Enviar</button>
+					</a>
+				</div>
+			</form>
 
 
 	<!-- footer -->
