--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="/images/logo-mercado-liebre.jpg" />
+	<link width="" rel="shortcut icon" href="/images/rolexLogo.png" />
 	
-	<title> Mercado Liebre Argentina</title>
+	<title>Rolex</title>
 			<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
@@ -18,13 +18,15 @@
 	<!-- Header -->
 	<%- include("./partials/header")  %>
 	<!-- /Header -->
-	
+	<hr>
 	<!-- Banner -->
 	<div class="banner">
-		<img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+		
 	</div>
 	<!-- /Banner -->
 
+
+<hr>
 	<!-- Novedades -->
 	<div class="container products-wrapper">
 		<div class="row">
