--- a/views/product.ejs
+++ b/views/product.ejs
@@ -82,9 +82,11 @@
 						</article>
 
 					</section>
-					<form class="form" action="" method="POST">
+					<form class="form" action="/" method="POST">
 						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
+						<a href="/" class="volver_index">
 						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
+						</a>
 					</form>
 					<hr>
 				</div>
