--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,13 @@
 				<h2 class="products-title">Novedades</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
+			
+			<!-- Probamos que funcione traer datos-->
+			<div>
+				<img src="<%= datos.productos[0].comentarios[0].imagenPerfil %>" alt="">
+			</div>
+
+
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="product">
