sql terminado con los insert

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -163,7 +163,7 @@ hr {
 .banner {
   padding-top: 100px;
   
-  background-image: url(/images/homeRolex.webp);
+  background-image: url(/images/fondorolex.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center -180px;
