--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 
 				<!-- Probamos que funcione traer datos-->
 
-				<% for(let i=0; i < datos.productos.length; i++){ %>
+				<% for(let i=0; i < 5; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
 							<a href="product">
@@ -70,62 +70,25 @@
 					<h2 class="products-title">Más comentados</h2>
 				</div>
 				<!-- Show the "ultimos" products -->
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product">
-							<figure class="product-box_image">
-								<img src="/images/products/default-image.png" alt="cafetera moulinex">
-							</figure>
-							<article class="product-box_data">
-								<h2>Nombre del producto</h2>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-								<p>Comentarios: 12</p>
-							</article>
-						</a>
-					</section>
-				</div>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product">
-							<figure class="product-box_image">
-								<img src="/images/products/default-image.png" alt="cafetera moulinex">
-							</figure>
-							<article class="product-box_data">
-								<h2>Nombre del producto</h2>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-								<p>Comentarios: 12</p>
-							</article>
-						</a>
-					</section>
-				</div>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product">
-							<figure class="product-box_image">
-								<img src="/images/products/default-image.png" alt="cafetera moulinex">
-							</figure>
-							<article class="product-box_data">
-								<h2>Nombre del producto</h2>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-								<p>Comentarios: 12</p>
-							</article>
-						</a>
-					</section>
-				</div>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product">
-							<figure class="product-box_image">
-								<img src="/images/products/default-image.png" alt="cafetera moulinex">
-							</figure>
-							<article class="product-box_data">
-								<h2>Nombre del producto</h2>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-								<p>Comentarios: 12</p>
-							</article>
-						</a>
-					</section>
-				</div>
+				
+				
+				<% for(let i=5; i < 10; i++){ %>
+					<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							<a href="product">
+								<figure class="product-box_image">
+									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex">
+								</figure>
+								<article class="product-box_data">
+								<h2><%= datos.productos[i].producto %></h2>
+									<p><%= datos.productos[i].descripcion %></p>
+									<p>Comentarios: <%= datos.productos[i].comentarios.length %></p>
+								</article>
+							</a>
+						</section>
+					</div>
+				<% } %>
+				
 			</div>
 		</div>
 		<!-- /Más comentados -->
