Arreglo estetico general, product.ejs en proceso

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -542,3 +542,9 @@ textarea.form-input {
     margin: auto;
   }
 }
+
+.imgProduct{
+  min-height: 300px;
+  max-height: 300px;
+  object-fit: cover;
+}
