--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,12 +39,12 @@
 
 				<!-- Probamos que funcione traer datos-->
 
-				<% for(let i=0; i < 5; i++){ %>
+				<% for(let i=0; i < 8; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
 							<a href="product">
 								<figure class="product-box_image">
-									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex">
+									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
 								</figure>
 								<article class="product-box_data">
 									<h2>
@@ -72,12 +72,12 @@
 				<!-- Show the "ultimos" products -->
 				
 				
-				<% for(let i=5; i < 10; i++){ %>
+				<% for(let i=6; i < 10; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
 							<a href="product">
 								<figure class="product-box_image">
-									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex">
+									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
 								</figure>
 								<article class="product-box_data">
 								<h2><%= datos.productos[i].producto %></h2>
