--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -23,11 +23,11 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="https://via.placeholder.com/150" alt="foto de perfil" class="foto-perfil">
+				<img src="<%= datos.usuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title">Nombre del usuario 
+					<h1 class="main-title"> <%= datos.usuario.usuario %> 
 						<a href="profile-edit">
 							<i class="fas fa-cog"></i>
 						</a>
@@ -36,7 +36,7 @@
 				</div>
 				<div>
 					<ul class="">
-						<li>8 productos</li>
+						<li> <%= datos.productos.length %> productos</li>
 						<li>200 seguidores</li>
 						<li>300 comentarios</li>
 					</ul>
@@ -62,7 +62,7 @@
 					<section class="product-box">
 						<a href="product">
 							<figure class="product-box_image">
-								<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex">
+								<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
 							</figure>
 							<article class="product-box_data">
 								<h2><%= datos.productos[i].producto %></h2>
