--- a/views/Partials/headerLogueado.ejs
+++ b/views/Partials/headerLogueado.ejs
@@ -26,7 +26,7 @@
 				</div>
 	
 				<div class="col-7 col-md-6">
-					<form action="" method="GET" class="search-form">
+					<form action="/search-results" method="GET" class="search-form">
 						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
@@ -52,7 +52,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="profile">
-							Nombre del usuario <i class="fas fa-user"></i>
+							<%= datos.usuario.usuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
