--- a/views/product.ejs
+++ b/views/product.ejs
@@ -50,10 +50,10 @@
 						<% } %>
 
 					</section>
-					<form class="form" action="/" method="GET">
+					<form class="form" action="product" method="GET">
 						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
 						<div>
-							<a href="/" class="volver_index">
+							<a href="product" class="volver_index">
 							<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
 							</a>
 						</div>
