--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -27,11 +27,27 @@
 			<div class="col-12">
 				<h2 class="products-title">Resultados de búsqueda</h2>
 			</div>
-			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
-			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
-			////////////////
-			</h2>
+			<% for(let i=0; i < datos.productos.length; i++){ %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="product">
+							<figure class="product-box_image">
+								<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
+							</figure>
+							<article class="product-box_data">
+								<h2>
+									<%= datos.productos[i].producto %>
+								</h2>
+								<p>
+									<%= datos.productos[i].descripcion %>
+								</p>
+								<p>Comentarios: <%= datos.productos[i].comentarios.length %>
+								</p>
+							</article>
+						</a>
+					</section>
+				</div>
+				<% } %>
 
 
 	<!-- footer -->
