--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -1,3 +1,10 @@
+<head>
+    <link rel="stylesheet" href="/ruta/a/tu/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+</head>
+
 <header class="main-header">
     <div class="container">
         <div class="row align-items-center">
