--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="/stylesheets/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/app.css">
+	<link rel="stylesheet" href="/stylesheets/style.css"
 </head>
 
 <body>
@@ -29,34 +30,32 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form action="/" method="GET">
-				<div>
-					<label for="mail">Email:</label>
-					<input id="mail" type="email" name="mail" value="">
-				</div>
-				<div>
-					<label for="usuario">Usuario:</label>
-					<input id="usuario" type="text" name="usuario" value="">
-				</div>
-				<div>
-					<label for="contrasenia">Contraseña:</label>
-					<input id="contrasenia" type="password" name="contrasenia" value="">
-				</div>
-				<div>
-					<label for="fecha_nac">Fecha de nacimiento:</label>
-					<input id="fecha_nac" type="date" name="fecha_nac" value="">
-				</div>
-				<div>
-					<label for="dni">DNI:</label>
-					<input id="dni" type="number" name="dni" value="">
-				</div>
-				<div>
-					<label for="pp">Foto de perfil:</label>
-					<input id="pp" type="text" name="pp" value="">
-				</div>
-				<div>
-					<a href="/" class="volver_index">
+				<div class="formulario">
+					<div class="input-group">
+						<label for="mail">Email:</label>
+						<input id="mail" type="email" name="mail" value="">
+					</div>
+					<div class="input-group">
+						<label for="usuario">Usuario:</label>
+						<input id="usuario" type="text" name="usuario" value="">
+					</div>
+					<div class="input-group">
+						<label for="contrasenia">Contraseña:</label>
+						<input id="contrasenia" type="password" name="contrasenia" value="">
+					</div>
+					<div class="input-group">
+						<label for="fecha_nac">Fecha de nacimiento:</label>
+						<input id="fecha_nac" type="date" name="fecha_nac" value="">
+					</div>
+					<div class="input-group">
+						<label for="dni">DNI:</label>
+						<input id="dni" type="number" name="dni" value="">
+					</div>
+					<div class="input-group">
+						<label for="pp">Foto de perfil:</label>
+						<input id="pp" type="text" name="pp" value="">
+					</div>
 					<button type="submit">Enviar</button>
-					</a>
 				</div>
 			</form>
 
