--- a/views/product.ejs
+++ b/views/product.ejs
@@ -23,7 +23,7 @@
 	<!-- product detail -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title"><%= datos.productos[1].producto %></h2> 
 			<p class="product-detail-description">
 				<a href="product-add">Editar</a>
 			</p>
