nombres al footer y detalles

--- a/views/Partials/footer.ejs
+++ b/views/Partials/footer.ejs
@@ -34,5 +34,8 @@
                 </article>
             </div>
         </div>
+        <div class="nombres">
+            <h2><i>Agustin Ares, Matias Abalo Pico y Tobias Tocho</i></h2>
+        </div>
     </div>
 </footer>
