--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,30 +24,32 @@
 
 	<!-- Novedades -->
 	<div class="container products-wrapper">
-		<div class="row">
+		<div class="formulario">
 			<div class="col-12">
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			
 			<form action="/" method="GET">
-				<div>
+				<div class="input-group">
 					<label for="mail">Email:</label>
 					<input id="mail" type="email" name="mail" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="contrasenia">Contraseña:</label>
 					<input id="contrasenia" type="password" name="contrasenia" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="recordame">Recordame</label>
 					<input id="recordame" type="checkbox" name="recordame" value="recordame">
 				</div>
-				<div>
+				<div class="input-group">
 					<a href="/" class="volver_index">
 					<button type="submit">Enviar</button>
 					</a>
 				</div>
 			</form>
+		</div>
+	</div>
 
 	<!-- footer -->
 	<%- include("./partials/footer")  %>
