--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -548,3 +548,8 @@ textarea.form-input {
   max-height: 300px;
   object-fit: cover;
 }
+
+.nombres{
+  display: flex;
+  justify-content: center;
+}
