--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -24,42 +24,44 @@
 
 	<!-- Novedades -->
 	<div class="container products-wrapper">
-		<div class="row">
+		<div class="formulario">
 			<div class="col-12">
 				<h2 class="products-title">Editar mi perfil</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form action="/" method="GET">
-				<div>
+				<div class="input-group">
 					<label for="mail">Email:</label>
 					<input id="mail" type="email" name="mail" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="usuario">Usuario:</label>
 					<input id="usuario" type="text" name="usuario" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="contrasenia">Contraseña:</label>
 					<input id="contrasenia" type="password" name="contrasenia" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="fecha_nac">Fecha de nacimiento:</label>
 					<input id="fecha_nac" type="date" name="fecha_nac" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="dni">DNI:</label>
 					<input id="dni" type="number" name="dni" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<label for="pp">Foto de perfil:</label>
 					<input id="pp" type="text" name="pp" value="">
 				</div>
-				<div>
+				<div class="input-group">
 					<a href="/" class="volver_index">
 					<button type="submit">Enviar</button>
 					</a>
 				</div>
 			</form>
+		</div>
+	</div>
 
 
 	<!-- footer -->
