--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
 
 	<!-- Novedades -->
 	<div class="container products-wrapper">
-		<div class="row">
+		<div class="formulario">
 			<div class="col-12">
 				<h2 class="products-title">Registrate</h2>
 			</div>
@@ -58,6 +58,8 @@
 					<button type="submit">Enviar</button>
 				</div>
 			</form>
+		</div>
+	</div>
 
 
 	<!-- footer -->
