prolijidad de codigo

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -38,7 +38,7 @@
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
-						<% for( i = 0; i <3; i++){ %>
+						<% for( i = 0; i < datos.productos[1].comentarios.length; i++){ %>
 						<article>
 							<img src="<%= datos.productos[1].comentarios[i].imagenPerfil %>" alt="">
 							<div class="data">
