--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -58,7 +58,7 @@
 			
 
 
-			<% for(let i=0; i < 10; i++) { %>
+			<% for(let i=0; i < datos.productos.length; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="product">
