--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,21 +43,19 @@
 
 				<!-- Probamos que funcione traer datos-->
 
-				<% for(let i=0; i < 8; i++){ %>
+				<% for(let i=0; i < datos.length; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
 							<a href="product">
 								<figure class="product-box_image">
-									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
+									<img src="<%= datos[i].imagenProducto %>" alt="foto" class="imgProduct">
 								</figure>
 								<article class="product-box_data">
 									<h2>
-										<%= datos.productos[i].producto %>
+										<%= datos[i].nombreProducto %>
 									</h2>
 									<p>
-										<%= datos.productos[i].descripcion %>
-									</p>
-									<p>Comentarios: <%= datos.productos[i].comentarios.length %>
+										<%= datos[i].descripcion %>
 									</p>
 								</article>
 							</a>
@@ -81,12 +79,11 @@
 						<section class="product-box">
 							<a href="product">
 								<figure class="product-box_image">
-									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
+									<img src="<%= datos[i].imagenProducto %>" alt="foto" class="imgProduct">
 								</figure>
 								<article class="product-box_data">
-								<h2><%= datos.productos[i].producto %></h2>
-									<p><%= datos.productos[i].descripcion %></p>
-									<p>Comentarios: <%= datos.productos[i].comentarios.length %></p>
+								<h2><%= datos[i].nombreProducto %></h2>
+									<p><%= datos[i].descripcion %></p>
 								</article>
 							</a>
 						</section>
