--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
 				<% for(let i=0; i < datos.length; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="product">
+							<a href="product/<%=  datos[i].id %>">
 								<figure class="product-box_image">
 									<img src="<%= datos[i].imagenProducto %>" alt="foto" class="imgProduct">
 								</figure>
