--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -19,41 +19,42 @@
 
 <body>
 	<!-- Header -->
-	<%- include("./partials/header")  %>
-	<!-- /Header -->
+	<%- include("./partials/header") %>
+		<!-- /Header -->
 
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Resultados de búsqueda</h2>
-			</div>
-			<% for(let i=0; i < datos.productos.length; i++){ %>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product">
-							<figure class="product-box_image">
-								<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
-							</figure>
-							<article class="product-box_data">
-								<h2>
-									<%= datos.productos[i].producto %>
-								</h2>
-								<p>
-									<%= datos.productos[i].descripcion %>
-								</p>
-								<p>Comentarios: <%= datos.productos[i].comentarios.length %>
-								</p>
-							</article>
-						</a>
-					</section>
+		<!-- Novedades -->
+		<div class="container products-wrapper">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="products-title">Resultados de búsqueda</h2>
 				</div>
-				<% } %>
+				<% for(let i=0; i < datos.productos.length; i++){ %>
+					<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							<a href="product">
+								<figure class="product-box_image">
+									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex"
+										class="imgProduct">
+								</figure>
+								<article class="product-box_data">
+									<h2>
+										<%= datos.productos[i].producto %>
+									</h2>
+									<p>
+										<%= datos.productos[i].descripcion %>
+									</p>
+									<p>Comentarios: <%= datos.productos[i].comentarios.length %>
+									</p>
+								</article>
+							</a>
+						</section>
+					</div>
+					<% } %>
 
 
-	<!-- footer -->
-	<%- include("./partials/footer")  %>
-	<!-- /footer -->
+						<!-- footer -->
+						<%- include("./partials/footer") %>
+							<!-- /footer -->
 </body>
 
 </html>
