--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -1,8 +1,10 @@
 <head>
     <link rel="stylesheet" href="/ruta/a/tu/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <header class="main-header">
@@ -16,7 +18,8 @@
 
             <div class="col-7 col-md-6">
                 <form action="search-results" method="GET" class="search-form">
-                    <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
+                    <input type="text" name="search" placeholder="Buscar productos, marcas y más"
+                        class="search-form_input">
                     <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
                 </form>
             </div>
