--- a/views/Partials/headerLogueado.ejs
+++ b/views/Partials/headerLogueado.ejs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link width="" rel="shortcut icon" href="/images/rolexLogo.png" />
-	
-	
+
+
 	<title>Rolex</title>
-			<!-- Font Awesome Stylesheet -->
+	<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/app.css">
-	<link rel="stylesheet" href="/stylesheets/style.css"
-	
-</head>
+	<link rel="stylesheet" href="/stylesheets/style.css" </head>
+
 <body>
 	<!-- Header -->
 	<header class="main-header">
@@ -27,14 +27,15 @@
 						<img class="logo" src="/images/rolexLogo.png">
 					</a>
 				</div>
-	
+
 				<div class="col-7 col-md-6">
 					<form action="/search-results" method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
+						<input type="text" name="search" placeholder="Buscar productos, marcas y más"
+							class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
 				</div>
-	
+
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
 						<i class="fas fa-hand-holding-usd"></i>
@@ -42,17 +43,17 @@
 					</a>
 				</div>
 			</div>
-	
+
 			<button class="btn-toggle-navbar">
 				<i class="fas fa-bars"></i>
 			</button>
-	
+
 			<nav class="main-navbar">
 				<ul class="left-navbar">
 					<li><a href="/">Todos los productos</a></li>
 					<li><a href="product-add">Cargar productos</a></li>
 				</ul>
-	
+
 				<ul class="right-navbar">
 					<li><a href="profile">
 							<%= datos.usuario.usuario %> <i class="fas fa-user"></i>
@@ -75,6 +76,7 @@
 		</div>
 	</header>
 	<!-- /Header -->
-	
-</body>	
+
+</body>
+
 </html>
