--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link width="" rel="shortcut icon" href="/images/rolexLogo.png" />
-	
+
 	<title>Rolex</title>
-			<!-- Font Awesome Stylesheet -->
+	<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/bootstrap-grid.min.css">
@@ -15,73 +16,84 @@
 	<link rel="stylesheet" href="/stylesheets/app.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
+
 <body>
 	<!-- Header -->
-	<%- include("./partials/headerLogueado")  %>
-	<!-- /Header -->
+	<%- include("./partials/headerLogueado") %>
+		<!-- /Header -->
 
-	<!-- Datos del usuario -->
-	<section class="info-usuario container products-wrapper">
-		<div class="row">
-			<div class="img-container offset-3 col-2">
-				<img src="<%= datos.usuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+		<!-- Datos del usuario -->
+		<section class="info-usuario container products-wrapper">
+			<div class="row">
+				<div class="img-container offset-3 col-2">
+					<img src="<%= datos.usuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+				</div>
+				<div class="data-container col-6">
+					<div class="d-flex align-items-center ">
+						<h1 class="main-title">
+							<%= datos.usuario.usuario %>
+								<a href="profile-edit">
+									<i class="fas fa-cog"></i>
+								</a>
+						</h1>
+						<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+					</div>
+					<div>
+						<ul class="">
+							<li>
+								<%= datos.productos.length %> productos
+							</li>
+							<li>200 seguidores</li>
+							<li>300 comentarios</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<div class="data-container col-6">
-				<div class="d-flex align-items-center ">
-					<h1 class="main-title"> <%= datos.usuario.usuario %> 
-						<a href="profile-edit">
-							<i class="fas fa-cog"></i>
-						</a>
-					</h1>
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+		</section>
+		<!-- /Datos del usuario -->
+
+		<!-- Mis productos -->
+
+		<div class="container products-wrapper">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="products-title">Mis productos</h2>
 				</div>
-				<div>
-					<ul class="">
-						<li> <%= datos.productos.length %> productos</li>
-						<li>200 seguidores</li>
-						<li>300 comentarios</li>
-					</ul>
-				</div>
+				<!-- Show mis productos -->
+
+
+
+				<% for(let i=0; i < datos.productos.length; i++) { %>
+					<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							<a href="product">
+								<figure class="product-box_image">
+									<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex"
+										class="imgProduct">
+								</figure>
+								<article class="product-box_data">
+									<h2>
+										<%= datos.productos[i].producto %>
+									</h2>
+									<p>
+										<%= datos.productos[i].descripcion %>
+									</p>
+									<p>Comentarios: <%= datos.productos[i].comentarios.length %>
+									</p>
+								</article>
+							</a>
+						</section>
+					</div>
+					<% } %>
+
 			</div>
 		</div>
-	</section>
-	<!-- /Datos del usuario -->
-
-	<!-- Mis productos -->
-	
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
-			</div>
-			<!-- Show mis productos -->
-			
+		<!-- /Mis productos -->
 
 
-			<% for(let i=0; i < datos.productos.length; i++) { %>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product">
-							<figure class="product-box_image">
-								<img src="<%= datos.productos[i].imagen %>" alt="cafetera moulinex" class="imgProduct">
-							</figure>
-							<article class="product-box_data">
-								<h2><%= datos.productos[i].producto %></h2>
-								<p><%= datos.productos[i].descripcion %></p>
-								<p>Comentarios: <%= datos.productos[i].comentarios.length %></p>
-							</article>
-						</a>
-					</section>
-				</div>
-			<% } %>
-			
-		</div>
-	</div>
-	<!-- /Mis productos -->
+		<!-- footer -->
+		<%- include("./partials/footer") %>
+			<!-- /footer -->
+</body>
 
-
-	<!-- footer -->
-	<%- include("./partials/footer")  %>
-	<!-- /footer -->
-</body>	
 </html>
