empecé el punto 2 (registración)

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
 					<h2 class="products-title">Registrate</h2>
 				</div>
 				<!-- Show the "ultimos" products -->
-				<form action="/" method="GET">
+				<form action="/register" method="POST">
 					<div class="formulario">
 						<div class="input-group">
 							<label for="mail">Email:</label>
