--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -55,7 +55,7 @@
                     </form>
                 </li> -->
                 <li>
-                    <a href="register">Creá tu cuenta <i class="far fa-address-card"></i>
+                    <a href="/register">Creá tu cuenta <i class="far fa-address-card"></i>
                     </a>
                 </li>
                 <li>
