--- a/views/Partials/headerLogueado.ejs
+++ b/views/Partials/headerLogueado.ejs
@@ -15,7 +15,8 @@
 	<link rel="stylesheet" href="/stylesheets/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/app.css">
-	<link rel="stylesheet" href="/stylesheets/style.css" </head>
+	<link rel="stylesheet" href="/stylesheets/style.css" 
+</head>
 
 <body>
 	<!-- Header -->
@@ -56,7 +57,7 @@
 
 				<ul class="right-navbar">
 					<li><a href="profile">
-							<%= datos.usuario.usuario %> <i class="fas fa-user"></i>
+							<%= datos.id %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
