--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,24 +36,32 @@
 							<input id="mail" type="email" name="mail" value="">
 						</div>
 						<div class="input-group">
-							<label for="usuario">Usuario:</label>
+							<label for="usuario">Nombre de Usuario:</label>
 							<input id="usuario" type="text" name="usuario" value="">
+						</div>
+						<div class="input-group">
+							<label for="nombre">Nombre: </label>
+							<input id="nombre" type="text" name="nombre" value="">
+						</div>
+						<div class="input-group">
+							<label for="apellido">Apellido:</label>
+							<input id="apellido" type="text" name="apellido" value="">
 						</div>
 						<div class="input-group">
 							<label for="contrasenia">Contraseña:</label>
 							<input id="contrasenia" type="password" name="contrasenia" value="">
 						</div>
 						<div class="input-group">
-							<label for="fecha_nac">Fecha de nacimiento:</label>
-							<input id="fecha_nac" type="date" name="fecha_nac" value="">
+							<label for="fechaNacimiento">Fecha de nacimiento:</label>
+							<input id="fechaNacimiento" type="date" name="fechaNacimiento" value="">
 						</div>
 						<div class="input-group">
 							<label for="dni">DNI:</label>
 							<input id="dni" type="number" name="dni" value="">
 						</div>
 						<div class="input-group">
-							<label for="pp">Foto de perfil:</label>
-							<input id="pp" type="text" name="pp" value="">
+							<label for="foto">Foto de perfil:</label>
+							<input id="foto" type="text" name="foto" value="">
 						</div>
 						<button type="submit">Enviar</button>
 					</div>
