--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,9 @@
 					<h2 class="products-title">Registrate</h2>
 				</div>
 				<!-- Show the "ultimos" products -->
+
+				<!-- acá empezamos las views de validar formularios -->
+
 				<form action="/register" method="POST">
 					<div class="formulario">
 						<div class="input-group">
