login y header logueado

--- a/views/Partials/headerLogueado.ejs
+++ b/views/Partials/headerLogueado.ejs
@@ -57,7 +57,7 @@
 
 				<ul class="right-navbar">
 					<li><a href="profile">
-							<%= datos.id %> <i class="fas fa-user"></i>
+							<%=locals.user.usuario%> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
