--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,23 +29,21 @@
 					<h2 class="products-title">Ingresar</h2>
 				</div>
 
-				<form action="/" method="GET">
+				<form action="/login" method="POST">
 					<div class="input-group">
 						<label for="mail">Email:</label>
-						<input id="mail" type="email" name="mail" value="">
+						<input id="mail" type="email" name="mail">
 					</div>
 					<div class="input-group">
 						<label for="contrasenia">Contraseña:</label>
-						<input id="contrasenia" type="password" name="contrasenia" value="">
+						<input id="contrasenia" type="password" name="contrasenia">
 					</div>
 					<div class="input-group">
 						<label for="recordame">Recordame</label>
-						<input id="recordame" type="checkbox" name="recordame" value="recordame">
+						<input id="recordame" type="checkbox" name="rememberme">
 					</div>
 					<div class="input-group">
-						<a href="/" class="volver_index">
-							<button type="submit">Enviar</button>
-						</a>
+							<button type="text">Enviar</button>
 					</div>
 				</form>
 			</div>
