Correccion de errores, ahora los profile muestran adecuadamente la cantidad de producos y cuales son estos, el header logueado lleva correctamente al perfil del usuario y complete las relaciones de los modelos.

--- a/views/Partials/headerLogueado.ejs
+++ b/views/Partials/headerLogueado.ejs
@@ -52,11 +52,11 @@
 			<nav class="main-navbar">
 				<ul class="left-navbar">
 					<li><a href="/">Todos los productos</a></li>
-					<li><a href="product-add">Cargar productos</a></li>
+					<li><a href="/product-add">Cargar productos</a></li>
 				</ul>
 
 				<ul class="right-navbar">
-					<li><a href="profile">
+					<li><a href="/profile/<%= locals.user.id %>">
 							<%=locals.user.usuario%> <i class="fas fa-user"></i>
 						</a>
 					</li>
