--- a/views/product.ejs
+++ b/views/product.ejs
@@ -51,7 +51,7 @@
 									<div class="data">
 										<p class="user">
 											<strong> <a href="/profile/<%= datos.comentarios[i].idUsuario %>">
-													<%= datos.comentarios[i].idUsuario %>:
+													<%= datos.comentarios[i].usuarios.usuario %>:
 												</a> </strong>
 											<%= datos.comentarios[i].textoComentario %>
 										</p>
