--- a/views/Partials/header.ejs
+++ b/views/Partials/header.ejs
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+                    <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
                 </li>
             </ul>
         </nav>
