--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -45,7 +45,7 @@
 					<div>
 						<ul class="">
 							<li>
-								 productos
+								 Productos: <%= datos.productos.length %>
 							</li>
 							<li>200 seguidores</li>
 							<li>300 comentarios</li>
@@ -65,30 +65,25 @@
 				</div>
 				<!-- Show mis productos -->
 
-
-
-				
+				<% for(let i=0; i < datos.productos.length; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="product">
+							<a href="product/<%=  datos.productos[i].id %>">
 								<figure class="product-box_image">
-									<img src="" alt="cafetera moulinex"
-										class="imgProduct">
+									<img src="<%= datos.productos[i].imagenProducto %>" alt="foto" class="imgProduct">
 								</figure>
 								<article class="product-box_data">
 									<h2>
-										
+										<%= datos.productos[i].nombreProducto %>
 									</h2>
 									<p>
-										
-									</p>
-									<p>Comentarios: 
+										<%= datos.productos[i].descripcion %>
 									</p>
 								</article>
 							</a>
 						</section>
 					</div>
-
+					<% } %>
 			</div>
 		</div>
 		<!-- /Mis productos -->
