--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,7 +36,7 @@
 					<div class="d-flex align-items-center ">
 						<h1 class="main-title">
 							<%= datos.usuario %>
-								<a href="profile-edit">
+								<a href="/profile-edit">
 									<i class="fas fa-cog"></i>
 								</a>
 						</h1>
@@ -68,7 +68,7 @@
 				<% for(let i=0; i < datos.productos.length; i++){ %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="product/<%=  datos.productos[i].id %>">
+							<a href="/product/<%=  datos.productos[i].id %>">
 								<figure class="product-box_image">
 									<img src="<%= datos.productos[i].imagenProducto %>" alt="foto" class="imgProduct">
 								</figure>
